# YOLOv8-Overlay-CS2-CPP

./: CMakeLists.txt  README.md  YOLOv8_Overlay_CS2.sln  YOLOv8_Overlay_CS2.vcxproj  YOLOv8_Overlay_CS2.vcxproj.filters  setup.ps1  setup_gpu_ort.ps1  vcpkg.json
arduino_mouse/: arduino_mouse.ino
src/: main.cpp  screen_capture.cpp  screen_capture.h  yolo_detector.cpp  yolo_detector.h
